[gd_scene load_steps=7 format=3 uid="uid://j6uyq1jiernl"]

[ext_resource type="Script" path="res://code/game/minigame/fight/fight.gd" id="1_830ul"]
[ext_resource type="Script" path="res://code/game/minigame/fight/fight_player.gd" id="2_mma2m"]
[ext_resource type="PackedScene" uid="uid://fjloskjckncm" path="res://code/game/celestials/planet.tscn" id="4_a64nh"]
[ext_resource type="Script" path="res://code/game/minigame/fight/fight_enemy.gd" id="5_jwdx6"]
[ext_resource type="Resource" uid="uid://bliyuvo5345ac" path="res://resources/planet/pick_me.tres" id="5_vm6v0"]
[ext_resource type="Script" path="res://code/game/minigame/fight/fight_manager.gd" id="6_i3g3t"]

[node name="Fight" type="Node2D"]
script = ExtResource("1_830ul")
is_debug = null

[node name="UI" type="CanvasLayer" parent="."]

[node name="FightManager" type="PanelContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_i3g3t")

[node name="MarginContainer" type="MarginContainer" parent="UI/FightManager"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/FightManager/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerHP" type="ProgressBar" parent="UI/FightManager/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="UI/FightManager/MarginContainer/HBoxContainer/PlayerHP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 10/20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/FightManager/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="UI/FightManager/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Attack" type="Button" parent="UI/FightManager/MarginContainer/HBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Attack"

[node name="Defend" type="Button" parent="UI/FightManager/MarginContainer/HBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Defend"

[node name="MarginContainer2" type="MarginContainer" parent="UI/FightManager/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="EnemyHP" type="ProgressBar" parent="UI/FightManager/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="UI/FightManager/MarginContainer/HBoxContainer/EnemyHP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 10/20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="Node2D" parent="." node_paths=PackedStringArray("fight_manager", "enemy")]
position = Vector2(120, 180)
script = ExtResource("2_mma2m")
fight_manager = NodePath("../UI/FightManager")
enemy = NodePath("../Enemy")

[node name="Planet" parent="Player" instance=ExtResource("4_a64nh")]
modulate = Color(0.156863, 0.788235, 0.870588, 1)
planet_resource = ExtResource("5_vm6v0")

[node name="Enemy" type="Node2D" parent="." node_paths=PackedStringArray("fight_manager", "enemy")]
position = Vector2(520, 180)
script = ExtResource("5_jwdx6")
fight_manager = NodePath("../UI/FightManager")
enemy = NodePath("../Player")

[node name="Planet" parent="Enemy" instance=ExtResource("4_a64nh")]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 30)
anchor_mode = 0
enabled = false

[connection signal="pressed" from="UI/FightManager/MarginContainer/HBoxContainer/Buttons/Attack" to="Player" method="_on_attack_pressed"]
[connection signal="pressed" from="UI/FightManager/MarginContainer/HBoxContainer/Buttons/Defend" to="Player" method="_on_defend_pressed"]
[connection signal="defeated" from="Player" to="." method="_on_player_defeated"]
[connection signal="turn_ended" from="Player" to="." method="_on_player_turn_ended"]
[connection signal="defeated" from="Enemy" to="." method="_on_enemy_defeated"]
[connection signal="turn_ended" from="Enemy" to="." method="_on_enemy_turn_ended"]
